--- a/index.html
+++ b/index.html
@@ -20,20 +20,18 @@
             height: 200px;
             border-radius: 200px;
         }
-    </style>1
+    </style>
 </head>
 <body>
-   
     <div>
-        <div class>
+        <div>
             <h1 style="text-align: center;">My Curriculum Vitae</h1>
- 
             <img class="photo" src= "./nisarg photo.jpg">
             <h2>Nisarg B. Patel</h2>
             <hr style="height:2px;border-width:0;color:black;background-color:black">
         </div>
     
-        <div> 
+        <div>
             <h2>Contact Information<h2>
             <hr style="height:2px;border-width:0;color:black;background-color:black">
             <div class="contect">
@@ -45,8 +43,8 @@
             <div class="link">
                 <p>Linkdin:</p> Nisarg Patel
             </div>
-
         </div>
+    </div>
         <h1>Education Qualification</h1>
         <hr style="height:2px;border-width:0;color: black;background-color: black;">
         <br>
@@ -143,10 +141,5 @@
             <li>Sports</li>
         </ul>
        </section>
-
-    </div>
-   
-
-
 </body>
 </html>
