--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             gap: 20px;
             font-weight: normal;
         }
-        .contect p,.email p,.link p{
+        .contect p,.email p,.link,.location p{
             color: black;
             font-weight: bold;
         }
@@ -42,6 +42,9 @@
             </div>
             <div class="link">
                 <p>Linkdin:</p> Nisarg Patel
+            </div>
+            <div class="location">
+                <p>Location:</p> Vadodara
             </div>
         </div>
     </div>
