--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             gap: 20px;
             font-weight: normal;
         }
-        .contect p,.email p,.link,.location p{
+        .contect p,.email p,.link p,.location p{
             color: black;
             font-weight: bold;
         }
