--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             gap: 20px;
             font-weight: normal;
         }
-        .contect p,.email p,.link p,.location p{
+        .contect p,.email p,.link p{
             color: black;
             font-weight: bold;
         }
@@ -19,6 +19,12 @@
             width: 150px;
             height: 150px;
             border-radius: 150px;
+        }
+         .loc{
+            display: inline-block;
+        }
+        .vd{
+            font-weight: normal;
         }
     </style>
 </head>
@@ -43,10 +49,9 @@
             <div class="link">
                 <p>Linkdin:</p> Nisarg Patel
             </div>
-            <div class="location">
-                <p>Location:</p> Vadodara
+            <div>
+                <p class="loc">Location:</p> <span class="vd"> Vadodara
             </div>
-        </div>
     </div>
         <h1>Education Qualification</h1>
         <hr style="height:2px;border-width:0;color: black;background-color: black;">
